# rustdesk-quick-support

./: .env.example  .gitignore  Cargo.toml  README.md  build-all.sh  build-linux.sh  build-macos.sh  build-windows.sh  task.md
.github/workflows/: build.yml
libs/enigo/src/win/: win_impl.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bytes_codec.rs  codec.rs  config.rs  connection.rs  fs.rs  input.rs  lib.rs  main.rs  proto.rs  proto_gen.rs  rendezvous.rs  video.rs  win_hide.rs
ui/: index.html  main.js  styles.css
