[package]
name = "rustdesk-client"
version = "0.1.0"
description = "RustDesk QuickSupport - Tauri Edition"
authors = ["rustdesk"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
dirs-next = "2.0"
rand = "0.8"
mac_address = "1.1"
hex = "0.4.3"
sha2 = "0.10.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
