[package]
name = "rustdesk-client"
version = "0.1.0"
description = "RustDesk QuickSupport - Tauri Edition"
authors = ["rustdesk"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }
protobuf-codegen = { version = "3.7" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
dirs-next = "2.0"
rand = "0.8"
hex = "0.4.3"
sha2 = "0.10"
anyhow = "1"
bytes = "1"
protobuf = { version = "3.7", features = ["with-bytes"] }
sodiumoxide = "0.2"
mac_address = "1.1"
dotenv = "0.15"
# screen capture + encode
xcap = "0.4"
image = "0.25"
openh264 = "0.7"
# input injection (vendored rustdesk enigo fork)
enigo = { path = "../libs/enigo" }
uuid = { version = "1", features = ["v4"] }
whoami = "1.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
